Learn more p tag spacing issue fixes

--- a/app/design/frontend/Alfakher/hookahwholesalers/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/hookahwholesalers/Magento_Catalog/web/css/source/_module.less
@@ -260,7 +260,9 @@
                 .lib-font-size(22);
             }
             > p {
-                margin-bottom: 0;
+                &:last-child {
+                    margin-bottom: 0;
+                }
             }
         }
         .clp_faq_toggle {
